--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,16 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="">
   
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+  <header>
+    <img src="./assets/logo.svg" alt="Logo of Meet" width="119" height="28">
+  </header>
+  <main>
+    <section>
+      <img src="" alt="" width="" height="" role="presentation">
+      <img src="" alt="" width="" height="" role="presentation">
+      <div>
+        <h1>Group Chat for Everyone</h1>
+        <p> Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+        <button>Download v1.3</button>
+        <button>What is it?</button>
+      </div>
+    </section>
+  </main>
+  <footer></footer>
+  
+ 
 
-  Download v1.3
-  What is it?
+  
+
 
   01
   Built for modern use
