Working on the HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="">
-  
-  <title>Frontend Mentor | Meet landing page</title>
-</head>
-<body>
-  <header>
-    <img src="./assets/logo.svg" alt="Logo of Meet" width="119" height="28">
-  </header>
-  <main>
-    <section>
-      <img src="" alt="" width="" height="" role="presentation">
-      <img src="" alt="" width="" height="" role="presentation">
-      <div>
-        <h1>Group Chat for Everyone</h1>
-        <p> Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <button>Download v1.3</button>
-        <button>What is it?</button>
-      </div>
-    </section>
-  </main>
-  <footer></footer>
-  
- 
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" type="text/css" href="" />
 
-  
-
-
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3
-</body>
+    <title>Frontend Mentor | Meet landing page</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/logo.svg" alt="Logo of Meet" width="119" height="28" />
+    </header>
+    <main>
+      <section>
+        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="" alt="" width="" height="" role="presentation" />
+        <div>
+          <h1>Group Chat for Everyone</h1>
+          <p>
+            Meet makes it easy to connect with others face-to-face virtually and
+            collaborate across any device.
+          </p>
+          <button>Download v1.3</button>
+          <button>What is it?</button>
+        </div>
+      </section>
+      <div>01</div>
+      <section>
+        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="" alt="" width="" height="" role="presentation" />
+        <div>
+          <p>Built for modern use</p>
+          <!-- A ribbo text -->
+          <h2>Smarter meetings, all in one place</h2>
+          <p>
+            Send messages, share files, show your screen, and record your
+            meetings — all in one workspace. Control who can join with
+            invite-only team access, data encryption, and data export.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>02</div>
+      <h2>Experience more together</h2>
+      <p>
+        Stay connected with reliable HD meetings and unlimited one-on-one and
+        group video sessions.
+      </p>
+      <button>Download v1.3</button>
+    </footer>
+  </body>
 </html>
