--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,8 +23,8 @@
     </header>
     <main>
       <section>
-        <img src="" alt="" width="" height="" role="presentation" />
-        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="./assets//desktop/image-hero-left.png" alt="" width="191" height="153" role="presentation" />
+        <img src="./assets//desktop/image-hero-right.png" alt="" width="191" height="153" role="presentation" />
         <div>
           <h1>Group Chat for Everyone</h1>
           <p>
@@ -37,10 +37,10 @@
       </section>
       <div>01</div>
       <section>
-        <img src="" alt="" width="" height="" role="presentation" />
-        <img src="" alt="" width="" height="" role="presentation" />
-        <img src="" alt="" width="" height="" role="presentation" />
-        <img src="" alt="" width="" height="" role="presentation" />
+        <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="" width="151" height="143" role="presentation" />
+        <img src="./assets/desktop/image-women-videochatting.jpg" alt="" width="151" height="143" role="presentation" />
+        <img src="./assets/desktop/image-men-in-meeting.jpg" alt="" width="151" height="143" role="presentation" />
+        <img src="./assets/desktop/image-man-texting.jpg" alt="" width="151" height="143" role="presentation" />
         <div>
           <p>Built for modern use</p>
           <!-- A ribbo text -->
