Revising the HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="description"
+      content="Meet landing page where it is convenient for everyone to connect and chat"
+    />
+    <meta name="keywords" content="HTML, CSS, Landing page, Group Chat" />
+    <meta name="author" content="Rupali Roy Choudhury" />
 
     <link
       rel="icon"
@@ -13,7 +16,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="./stylesheet.css" />
 
     <title>Frontend Mentor | Meet landing page</title>
   </head>
@@ -23,8 +26,20 @@
     </header>
     <main>
       <section>
-        <img src="./assets//desktop/image-hero-left.png" alt="" width="191" height="153" role="presentation" />
-        <img src="./assets//desktop/image-hero-right.png" alt="" width="191" height="153" role="presentation" />
+        <img
+          src="./assets//desktop/image-hero-left.png"
+          alt=""
+          width="191"
+          height="153"
+          role="presentation"
+        />
+        <img
+          src="./assets//desktop/image-hero-right.png"
+          alt=""
+          width="191"
+          height="153"
+          role="presentation"
+        />
         <div>
           <h1>Group Chat for Everyone</h1>
           <p>
@@ -37,10 +52,34 @@
       </section>
       <div>01</div>
       <section>
-        <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="" width="151" height="143" role="presentation" />
-        <img src="./assets/desktop/image-women-videochatting.jpg" alt="" width="151" height="143" role="presentation" />
-        <img src="./assets/desktop/image-men-in-meeting.jpg" alt="" width="151" height="143" role="presentation" />
-        <img src="./assets/desktop/image-man-texting.jpg" alt="" width="151" height="143" role="presentation" />
+        <img
+          src="./assets/desktop/image-woman-in-videocall.jpg"
+          alt=""
+          width="151"
+          height="143"
+          role="presentation"
+        />
+        <img
+          src="./assets/desktop/image-women-videochatting.jpg"
+          alt=""
+          width="151"
+          height="143"
+          role="presentation"
+        />
+        <img
+          src="./assets/desktop/image-men-in-meeting.jpg"
+          alt=""
+          width="151"
+          height="143"
+          role="presentation"
+        />
+        <img
+          src="./assets/desktop/image-man-texting.jpg"
+          alt=""
+          width="151"
+          height="143"
+          role="presentation"
+        />
         <div>
           <p>Built for modern use</p>
           <!-- A ribbo text -->
