Revising the html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,20 +31,20 @@
           <source srcset="./assets/desktop/image-hero-right.png" media="(min-width:80rem)">
           <img src="./assets/tablet/image-hero.png" alt="" width="199" height="153" role="presentation" />
         </picture>
-        <div>
+        <div> <!--Recheck the usage of div in this-->
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
           </p>
           <button>Download v1.3</button>
-          <a role="button" aria-label="Learn more about meet" href=""
+          <a role="button" aria-label="Learn more about meet" href="#what-is-it"
             >What is it?</a
           >
         </div>
       </section>
-      <div>01</div>
-      <section>
+      <div>01</div> <!--Recheck the usage of div in this-->
+      <section id="what-is-it">
         <img
           src="./assets/desktop/image-woman-in-videocall.jpg"
           alt=""
@@ -73,9 +73,8 @@
           height="143"
           role="presentation"
         />
-        <div>
+        <div> <!--Recheck the usage of div in this-->
           <p>Built for modern use</p>
-          <!-- A ribbo text -->
           <h2>Smarter meetings, all in one place</h2>
           <p>
             Send messages, share files, show your screen, and record your
@@ -86,7 +85,7 @@
       </section>
     </main>
     <footer>
-      <div>02</div>
+      <div>02</div> <!--Recheck the usage of div in this-->
       <h2>Experience more together</h2>
       <p>
         Stay connected with reliable HD meetings and unlimited one-on-one and
