Revising the HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,23 +27,39 @@
     <main>
       <section>
         <picture>
-          <source srcset="./assets/desktop/image-hero-left.png" media="(min-width:80rem)">
-          <source srcset="./assets/desktop/image-hero-right.png" media="(min-width:80rem)">
-          <img src="./assets/tablet/image-hero.png" alt="" width="199" height="153" role="presentation" />
+          <source
+            srcset="./assets/desktop/image-hero-left.png"
+            media="(min-width:80rem)"
+          />
+          <source
+            srcset="./assets/desktop/image-hero-right.png"
+            media="(min-width:80rem)"
+          />
+          <img
+            src="./assets/tablet/image-hero.png"
+            alt=""
+            width="199"
+            height="153"
+            role="presentation"
+          />
         </picture>
-        <div> <!--Recheck the usage of div in this-->
+        <article>
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
           </p>
-          <button>Download v1.3</button>
-          <a role="button" aria-label="Learn more about meet" href="#what-is-it"
+          <button class="btn btn--primary">Download v1.3</button>
+          <a
+            class="btn btn--secondary"
+            role="button"
+            aria-label="Learn more about meet"
+            href="#what-is-it"
             >What is it?</a
           >
-        </div>
+        </article>
       </section>
-      <div>01</div> <!--Recheck the usage of div in this-->
+      <div>01</div>
       <section id="what-is-it">
         <img
           src="./assets/desktop/image-woman-in-videocall.jpg"
@@ -73,7 +89,7 @@
           height="143"
           role="presentation"
         />
-        <div> <!--Recheck the usage of div in this-->
+        <article>
           <p>Built for modern use</p>
           <h2>Smarter meetings, all in one place</h2>
           <p>
@@ -81,17 +97,17 @@
             meetings — all in one workspace. Control who can join with
             invite-only team access, data encryption, and data export.
           </p>
-        </div>
+        </article>
       </section>
     </main>
     <footer>
-      <div>02</div> <!--Recheck the usage of div in this-->
+      <div>02</div>
       <h2>Experience more together</h2>
       <p>
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button>Download v1.3</button>
+      <button class="btn btn--secondary">Download v1.3</button>
     </footer>
   </body>
 </html>
