Revising the HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -54,13 +54,13 @@
             class="btn btn--secondary"
             role="button"
             aria-label="Learn more about meet"
-            href="#what-is-it"
+            href="#navigate-to-what-is-it"
             >What is it?</a
           >
         </article>
       </section>
       <div>01</div>
-      <section id="what-is-it">
+      <section id="navigate-to-what-is-it">
         <img
           src="./assets/desktop/image-woman-in-videocall.jpg"
           alt=""
@@ -102,12 +102,29 @@
     </main>
     <footer>
       <div>02</div>
-      <h2>Experience more together</h2>
-      <p>
-        Stay connected with reliable HD meetings and unlimited one-on-one and
-        group video sessions.
-      </p>
-      <button class="btn btn--secondary">Download v1.3</button>
+      <article>
+        <h2>Experience more together</h2>
+        <p>
+          Stay connected with reliable HD meetings and unlimited one-on-one and
+          group video sessions.
+        </p>
+        <button class="btn btn--secondary">Download v1.3</button>
+      </article>
+      <picture>
+        <source
+          srcset="./assets/desktop/image-footer.jpg"
+          media="(min-width: 80rem)"
+        />
+        <source
+          srcset="./assets/tablet/image-footer.jpg"
+          media="(min-width: 48rem)"
+        />
+        <img
+          src="./assets/mobile/image-footer.jpg"
+          alt=""
+          role="presentation"
+        />
+      </picture>
     </footer>
   </body>
 </html>
