Investigating the source issue of just 1 image

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,6 +27,14 @@
     <main>
       <section>
         <picture>
+          <!-- Investigate why both the images are not showing on desktop inspite of specifying the desktop media. why only the first source is loaded?-->
+          <!-- <source
+            srcset="
+              ./assets/desktop/image-hero-left.png,
+              ./assets/desktop/image-hero-right.png
+            "
+            media="(min-width:80rem)"
+          /> -->
           <source
             srcset="./assets/desktop/image-hero-left.png"
             media="(min-width:80rem)"
