--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon-32x32.png"
+      href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" type="text/css" href="./stylesheet.css" />
 
@@ -22,19 +22,19 @@
   </head>
   <body>
     <header>
-      <img src="./assets/logo.svg" alt="Logo of Meet" width="119" height="28" />
+      <img src="./assets/images/logo.svg" alt="Logo of Meet" width="119" height="28" />
     </header>
     <main>
       <section>
         <img
-          src="./assets/desktop/image-hero-left.png"
+          src="./assets/images/desktop/image-hero-left.png"
           alt=""
           width="199"
           height="153"
           role="presentation"
         />
         <img
-          src="./assets/desktop/image-hero-right.png"
+          src="./assets/images/desktop/image-hero-right.png"
           alt=""
           width="199"
           height="153"
@@ -59,28 +59,28 @@
       <div>01</div>
       <section id="navigate-to-what-is-it">
         <img
-          src="./assets/desktop/image-woman-in-videocall.jpg"
+          src="./assets/images/desktop/image-woman-in-videocall.jpg"
           alt=""
           width="151"
           height="143"
           role="presentation"
         />
         <img
-          src="./assets/desktop/image-women-videochatting.jpg"
+          src="./assets/images/desktop/image-women-videochatting.jpg"
           alt=""
           width="151"
           height="143"
           role="presentation"
         />
         <img
-          src="./assets/desktop/image-men-in-meeting.jpg"
+          src="./assets/images/desktop/image-men-in-meeting.jpg"
           alt=""
           width="151"
           height="143"
           role="presentation"
         />
         <img
-          src="./assets/desktop/image-man-texting.jpg"
+          src="./assets/images/desktop/image-man-texting.jpg"
           alt=""
           width="151"
           height="143"
@@ -109,15 +109,15 @@
       </article>
       <picture>
         <source
-          srcset="./assets/desktop/image-footer.jpg"
+          srcset="./assets/images/desktop/image-footer.jpg"
           media="(min-width: 80rem)"
         />
         <source
-          srcset="./assets/tablet/image-footer.jpg"
+          srcset="./assets/images/tablet/image-footer.jpg"
           media="(min-width: 48rem)"
         />
         <img
-          src="./assets/mobile/image-footer.jpg"
+          src="./assets/images/mobile/image-footer.jpg"
           alt=""
           role="presentation"
         />
