--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
       <img src="./assets/images/logo.svg" alt="Logo of Meet" width="119" height="28" />
     </header>
     <main>
-      <section>
+      <section id="first-section">
         <img
           src="./assets/images/desktop/image-hero-left.png"
           alt=""
           width="199"
           height="153"
           role="presentation"
+          id="image-hero-left"
         />
         <img
           src="./assets/images/desktop/image-hero-right.png"
@@ -39,16 +40,17 @@
           width="199"
           height="153"
           role="presentation"
+          id="image-hero-right"
         />
-        <article>
+        <article id="first-section__article">
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
           </p>
-          <button class="btn btn--primary">Download v1.3</button>
+          <button class="btn--primary">Download <strong>v1.3</strong></button>
           <a
-            class="btn btn--secondary"
+            class="btn--secondary"
             role="button"
             aria-label="Learn more about meet"
             href="#navigate-to-what-is-it"
@@ -105,7 +107,7 @@
           Stay connected with reliable HD meetings and unlimited one-on-one and
           group video sessions.
         </p>
-        <button class="btn btn--secondary">Download v1.3</button>
+        <button class="btn--secondary">Download v1.3</button>
       </article>
       <picture>
         <source
