Working on the demarcation styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   </head>
   <body>
     <header>
-      <img src="./assets/images/logo.svg" alt="Logo of Meet" width="119" height="28" />
+      <img
+        src="./assets/images/logo.svg"
+        alt="Logo of Meet"
+        width="119"
+        height="28"
+      />
     </header>
     <main>
       <section id="first-section">
@@ -58,7 +63,14 @@
           >
         </article>
       </section>
-      <div>01</div>
+      <div
+        role="separator"
+        aria-orientation="vertical"
+        class="demarcation-section"
+      >
+        <div class="line"></div>
+        <div class="number">01</div>
+      </div>
       <section id="navigate-to-what-is-it">
         <img
           src="./assets/images/desktop/image-woman-in-videocall.jpg"
@@ -100,7 +112,14 @@
       </section>
     </main>
     <footer>
-      <div>02</div>
+      <div
+        role="separator"
+        aria-orientation="vertical"
+        class="demarcation-section"
+      >
+        <div class="line"></div>
+        <div class="number">01</div>
+      </div>
       <article>
         <h2>Experience more together</h2>
         <p>
