Working on the styling for 2nd section - mobile view

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       />
     </header>
     <main>
-      <section id="first-section">
+      <section id="intro-section">
         <img
           src="./assets/images/desktop/image-hero-left.png"
           alt=""
@@ -47,7 +47,7 @@
           role="presentation"
           id="image-hero-right"
         />
-        <article id="first-section__article">
+        <article id="intro-section__article">
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
@@ -58,7 +58,7 @@
             class="btn--secondary"
             role="button"
             aria-label="Learn more about meet"
-            href="#navigate-to-what-is-it"
+            href="#what-is-it"
             >What is it?</a
           >
         </article>
@@ -71,13 +71,14 @@
         <div class="line"></div>
         <div class="number">01</div>
       </div>
-      <section id="navigate-to-what-is-it">
+      <section id="what-is-it">
         <img
           src="./assets/images/desktop/image-woman-in-videocall.jpg"
           alt=""
           width="151"
           height="143"
           role="presentation"
+          id="image-woman-in-videocall"
         />
         <img
           src="./assets/images/desktop/image-women-videochatting.jpg"
@@ -85,6 +86,7 @@
           width="151"
           height="143"
           role="presentation"
+          id="image-women-videochatting"
         />
         <img
           src="./assets/images/desktop/image-men-in-meeting.jpg"
@@ -92,6 +94,7 @@
           width="151"
           height="143"
           role="presentation"
+          id="image-men-in-meeting"
         />
         <img
           src="./assets/images/desktop/image-man-texting.jpg"
@@ -99,9 +102,10 @@
           width="151"
           height="143"
           role="presentation"
+          id="image-man-texting"
         />
-        <article>
-          <p>Built for modern use</p>
+        <article id="what-is-it__article">
+          <p class="ribbon-text">Built for modern use</p>
           <h2>Smarter meetings, all in one place</h2>
           <p>
             Send messages, share files, show your screen, and record your
