Working on the footer

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </p>
         <button class="btn--secondary">Download v1.3</button>
       </article>
-      <picture>
+      <!-- <picture>
         <source
           srcset="./assets/images/desktop/image-footer.jpg"
           media="(min-width: 80rem)"
@@ -146,7 +146,7 @@
           alt=""
           role="presentation"
         />
-      </picture>
+      </picture> -->
     </footer>
   </body>
 </html>
