--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@
           </p>
         </article>
       </section>
-    </main>
-    <footer>
       <div
         role="separator"
         aria-orientation="vertical"
@@ -124,7 +122,7 @@
         <div class="line"></div>
         <div class="number">02</div>
       </div>
-      <article>
+      <article class="footer">
         <h2>Experience more together</h2>
         <p>
           Stay connected with reliable HD meetings and unlimited one-on-one and
@@ -132,21 +130,25 @@
         </p>
         <button class="btn--secondary">Download v1.3</button>
       </article>
-      <!-- <picture>
-        <source
-          srcset="./assets/images/desktop/image-footer.jpg"
-          media="(min-width: 80rem)"
-        />
-        <source
-          srcset="./assets/images/tablet/image-footer.jpg"
-          media="(min-width: 48rem)"
-        />
-        <img
-          src="./assets/images/mobile/image-footer.jpg"
-          alt=""
-          role="presentation"
-        />
-      </picture> -->
+    </main>
+    <footer>
+      <div class="footer-background">
+        <picture>
+          <source
+            srcset="./assets/images/desktop/image-footer.jpg"
+            media="(min-width: 80rem)"
+          />
+          <source
+            srcset="./assets/images/tablet/image-footer.jpg"
+            media="(min-width: 48rem)"
+          />
+          <img
+            src="./assets/images/mobile/image-footer.jpg"
+            alt=""
+            role="presentation"
+          />
+        </picture>
+      </div>
     </footer>
   </body>
 </html>
