--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" type="text/css" href="./stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/index.scss" />
 
     <title>Frontend Mentor | Meet landing page</title>
   </head>
