Refactoring the mobile styles

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           Stay connected with reliable HD meetings and unlimited one-on-one and
           group video sessions.
         </p>
-        <button class="btn--secondary">Download v1.3</button>
+        <button class="btn--secondary">Download <strong>v1.3</strong></button>
       </article>
     </main>
     <footer>
