Experiment with footer aspect ratio

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
             src="./assets/images/mobile/image-footer.jpg"
             alt=""
             role="presentation"
+            width="375"
+            height="428"
           />
         </picture>
       </div>
