Matching the visible name with the accessible name

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a
             class="btn--secondary"
             role="button"
-            aria-label="Learn more about meet"
+            aria-label="What is it?"
             href="#what-is-it"
             >What is it?</a
           >
